# timepix-spidr-data-parser

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/io/: mod.rs  read_cluster_data.rs  read_hits_data.rs  read_raw_data.rs  read_trigger_data.rs  write_cluster_data.rs  write_hits_data.rs  write_trigger_data.rs
