[package]
name = "timepix-spidr-data-parser"
version = "0.0.0"
authors = ["Jared Vann <jvann@hep.ph.liv.ac.uk>"]
edition = "2018"

[dependencies]
bit-vec = "0.6"
byteorder = "1.3"
chrono = "0.4"
colored = "1.8"
csv = "1.1"
glob = "0.3"
itertools = "0.8"
rayon = "1.2.0"
regex = "1"
separator = "0.4"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2.8"
toml = "0.5.3"
indicatif = "0.12.0"
lazy_static = "1.4.0"
vec3D = "0.3.0"
rand = "0.7.2"
serde_derive = "1.0.102"

[dependencies.clap]
version = "2.33"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "suggestions", "color" ]

[profile.release]
debug = true
